# job_search_agent

./: .gitignore  README.md  pyproject.toml
input/: example_cv.md
output/: job_postings.json  structured_resume.json  tailored_cover_letter.json  tailored_cv.json
output/BOSCH_GLOBAL_SOFTWARE_TECHNOLOGIES-Django_Web_Application_Developer/: cover_letter.docx  cv.docx
output/CÔNG_TY_TNHH_CÁC_GIẢI_PHÁP_SOFTEL-Backend_Developer_(Python)/: cover_letter.docx  cv.docx
output/TECHVIFY_SOFTWARE.,_JSC-Python_Developer/: cover_letter.docx  cv.docx
src/job_search_agent/: crew.py  main.py  schemas.py
src/job_search_agent/config/: agents.yaml  tasks.yaml
src/job_search_agent/tools/: custom_tool.py
